--- a/_posts/2000-01-01-未完成作品合集.md
+++ b/_posts/2000-01-01-未完成作品合集.md
@@ -31,6 +31,14 @@ categories: 小说 未完成 朵朵
 
 很显然是Jojo同人文。从前后相关文档来看，大概写于2002年10月到12月之间。只有个开头。
 
+# 历史，Invation，Killer
+
+完全忘记写作初衷了。Killer很显然是受了古龙的影响。
+
+# 我死给你看
+
+本来想挑战恐怖小说的，但是后来放弃了。
+
 <hr>
 2016-05-28
 
@@ -306,3 +314,112 @@ categories: 小说 未完成 朵朵
 在历史上，越狱的人也许有不少，但成功越狱的人就不多了。至于成功越狱的死刑犯，“羚羊挂角”这个词简直就是个绝妙的双关语。
 
 不过即便如此，我也不会“绝望”；谁也不能预言将来会发生什么，明天就是死刑执行的日子。我的心里既没有“后悔”也没有“绝望”，因为我相信，只要生命没有……（未完待续）
+
+# 历史
+
+夕阳西下，余辉将xxxx城郊的森林染成温暖的金黄色。一位老人正在和他的孙子一起，静静地信步于森林左近的草原之上。
+
+“你们，今后你们就是历史的见证。”老人缓缓的说。他是xxxx大学历史系教授，周末喜欢到宁静的地方散散步，休息的同时，还可以在和自然的融和中获得智慧的启发。
+
+“什么，爷爷？历史难道不是已经过去的岁月吗？您们岂非才是历史的见证？”他的孙子虽然只有十几岁，却喜欢和祖父一起散步。他不是一般的小孩，他的心智格外成熟；祖父睿智的话语，对他有着一种独特的魅力。
+
+“历史是什么？是书上、卡带上的那些记载吗？不，孩子。被记载下来的历史，必然失去了原有风貌。”
+
+“那究竟什么是历史呢？难道真正的历史注定不能为人们所知吗？”
+
+“所谓历史，不过是经历而已；只不过不是一、两个人的经历，而是全人类，甚至全宇宙的经历。所以只有亲身经历的，对你来说，才是真正的历史。说道历史，人们往往拘泥于过去，其实更应该做的，乃是把握自己，努力去感受，进而去创造啊！”
+
+“爷爷，你怎么想起这种话了呢？你肯定不能这么给学生们讲课吧。”
+
+“那当然。在学校里讲的所谓历史，其实不过是考据而已；这也正是我们这样的人工作。但是看了再多的文字、图片、视频，你也决不会认识到真正的历史是什么样子的。过去的人是怎么想的？人的想法，这种最重要的东西，真的可以用文字表达清楚吗？真正的哲学家也许可以，因为他们可以把纷繁的事物系统化；但换个角度来说，也许只有可以系统化的事务才能完全被描述清楚吧……或者说理性更容易被表达？但是感性——且不说‘爱’这个千古之谜——‘战争呢？表面上战争的成因、准备乃至胜败，一切都有强大的理性作用其上，但是想一想本质吧：性命相搏！这哪里有什么理性可言！其实我为什么会想到这些？接触了太多关于战争的资料，看着那些冷冷的‘甲国伤十万亡二万’，我越来越深刻的怀疑：什么是历史？怎样研究历史才有意义？”
+
+“可是爷爷，战争并不是人类的全部……”
+
+“但战争最激烈，影响最大，而且……从某种意义上讲，无法避免。战争野蛮吗？当然！但是从另一个角度来讲，战争的本质是文明的碰撞，没有文明就没有真正意义上的战争。战争不是抢夺什么东西……”
+
+“战争的目的岂非常常都是物质利益？或者便是征服对方……”
+
+“获得物质利益岂非正是为了发展自己的文明？难道有战胜后反而立刻放弃自己文明形式的吗？或者如你说，是为了进一步的征服；而征服后的结果呢？当然是文明的更替和反更替。在历史上，文明的对峙常常导致战争的对峙，甚至爆发。所以说，文明是战争的根源；那么是否有文明就一定有战争呢？就现在而言，战争好像已经渐渐远离了我们，但仔细想想，其实这正是因为文明已经渐渐的混同了啊。”
+
+“那么说，战争岂不是要消失了？”
+
+“所以我说，你们就是历史的见证啊……战争伴随着文明而出现，会不会有因为文明而消亡呢？这个问题本来应该由我们这一代来回答的，但是宗教问题使我们丧失了回答的资格。……”（未完待续）
+
+# 我死给你看
+
+Show you my Death
+
+“天气晴朗，万里无云，又是平常的一天。某市某校著名学生罗斌迈着轻松的步伐，愉快地向学校飞去。”罗斌抑扬顿挫地大声念着无聊的句子，驾驶着喷气滑板——看着危险，可有专家论证过比单人摩托要安全——穿梭于早晨拥挤的车流中，朗然道：“To be late or not to be？ 这就是问题所在！啊……哈姆雷特要是句句压韵该多有意思！”
+
+事实上，罗斌迟到与否不是什么大不了的问题，毕竟他的人缘不错，也讨老师喜欢。而且今天他的驾驶技术意外地出色，以至于竟然在上课十分钟前到达了教室。同学们看到他近乎奇迹的行径，大都惊讶万分，以至于不约而同地鼓起掌来。
+
+罗斌一边满面笑容地向大家挥着手，一边向自己的座位走去，不想大家忽然转过头去，朝向门口，表情也“啪”地一下子庄重严肃了起来——虽则掌声还在尴尬地响着。他心里一动，没有回头张望，而是窜到自己的位子上坐下，打开学习机，这才抬起了头。门口辅导教师李先生仿佛为大家的先知——是否卜过暂且不论——所惊讶，脸上还残留着一丝奇色，咳了一声，道：“啊……虽然大家已经知道啦，我还是要例行地介绍一下：一名同年级的转校生要成为大家的新同学了——尹思同学，进来吧！”
+
+一个小个子男孩低着头，慢慢的走进了教室。掌声当然早就停了。他转过身，慢慢地抬起头，但见此人面色惨白，牙关紧咬，神情竟然颇有桀骜之意；徐徐面无表情地说道：“大家好，我叫尹思。……。”稍微沉默了一会，他把眼光转向李先生，扬起下巴，仿佛在说：“你让我做的自我介绍和问候都说了，还干什么？”李先生尴尬地笑了笑，干巴巴地说道：“希望大家好好相处，啊。”举目眺望了一下，看到了正襟危坐的罗斌，微现讶异之色，想了想，道：“第二行的从罗斌开始，每个人向后移一个位置。”转过头对尹思道：“拿着你的学习机，就坐在第二行第三个位子上吧。”
+
+教室里顿时响起一片挪座位、搬机器的声音。想起刚才偶然瞥见的那辆停在校门口的逆流线型超豪华加长喷汽车，以及车上那个醒目的金黄色“正义集团”的标志，罗斌的头脑中没来由地出现了“来者不善，善者不来”这句话。
+
+他暗道：“这个家伙貌似阴沉，不知是什么来头？”
+
+*	*	*	*
+
+一周过去了，看来罗斌的第一印象没有错，那个转校生果然是个“阴沉”的家伙。此人平时早到晚走，面无表情，不与任何人说话，可是举止似乎并不能用“内向”两个字概括。大家私下里自然议论纷纷，但是并没有得到什么有意义的结果；罗斌虽然有时也会想起“正义集团”，但是瘦小的尹思实在是难以和正义集团那个金黄的圆圈内一个“正”字的肥肥大大的标志联系起来。除此之外无话。直到一个既是十三日又是星期一的一天……
+
+罗斌照例踩着上课铃声奔入教室——自从把铃声作为上课标志的时候起，就有那么一批智慧的踩铃人——
+正好遇到百年难得一见的数学突击测验。幸好题目倒不太难，可是最后一题他却死活也想不出来，只好打上“不会做”交了上去。这倒是个搭话的好机会，罗斌想，就让我去小摸一下那个小僻的底细吧。于是罗斌整了整衣服，走上前去，肃然问：“你好，尹思同学。请问你可以给我讲一讲刚才那道证明万有引力定律的题吗？”
+
+尹思抬起头，上下打量了一下，冷然道：“哦？这种题，我小学就会做了。”徐徐又提高了声音，道：“你是弱智吗？”
+
+全班同学的目光“唰”的集中到罗斌身上。
+
+如果罗斌就此大发雷霆，叫道“小子，咱们去厕所吧”之类的话，那他就不是罗斌了——尽管这是个悖论。话说罗斌能得到今天的好人缘，实在绝非是浪得虚名。对“如果别人打你左脸，你要把右脸也让给他”这句话，他一向是持反对态度：如果闹到被人打你脸的地步，再干什么都没用！所以他憨厚的一笑，就像人生最大的问题有了答案一样，发自内心的说了一声“哦……”，安静的回到了座位上。努力发展良好的人际关系是罗斌的人生目标之一，他是决不会轻言放弃的。
+
+新的机会很快就来到了。班级学生会干部普选大会在当天下午隆重召开。到推举学习委员候选人的时候，平时对这种活动漠不关心的罗斌破天荒的发言道：“我推荐刚转到我们班的尹思同学。正如大家所见，尹思同学学习刻苦，把大部分时间都花在了学习上；虽然现在他和大家还不是很熟，但是我相信尹思同学一定可以胜任这个职务。”
+
+这番话入情入理，再考虑上午的事件，照理说尹思应该当场掉下泪来才对。看得出来李先生对罗斌的发言也感到很满意，他接到：“是啊，罗斌同学的话有一定的道理。虽然彼此还不熟悉，大家也应该给刻苦的同学一个机会啊。也许他对我们班级学生会的工作有着独到的见解呢。既然有人提名，尹思同学，你就作一下发言吧。”
+
+尹思走到讲台前，看得出他很感慨。“嗯……想不到才到这里一周，就被人推为候选人；而这个人，我上午还曾当中辱骂过他。”他凝视着罗斌，抬起手向他一指，“罗斌，你是白痴吗？！”
+
+李先生差一点晕过去，想了一想又忍住了。
+
+全班鸦雀无声。
+
+罗斌的涵养功夫再好也忍不住了，他只是喜欢忍让，并不是滥好人。但是毕竟不好当众（特别是当着辅导教师）破口，罗斌惜字如金地说道：“尹思？！哼！还Privacy呢！小～～P！”
+
+尹思颤声道：“你……你怎么知道？”
+
+罗斌并不是说话办事不计后果的傻瓜，但他还是怎么也没有料到尹思的反应。事实上，这在以后几乎成了他永远的恶梦。只见尹思的面容逐渐扭曲，咬牙切齿的说道：“哼哼……你也这么说，都这么说……好，好……罗斌，你、你……我、我，”他突然声嘶力竭的喊道：“我死给你看！”
+
+说完就冲出了教室。罗斌当场呆在那里，半晌无语。
+
+*	*	*	*
+
+转过天来，在上学的路上，罗斌一直在竭力考虑如何和小僻——不，尹思同学——和解。虽然即使是李先生也不认为是罗斌的错，但是想到尹思当时那近乎诅咒的神情，罗斌心里还是有些发毛。踏进校门，他立刻发现，那个要“死给他看”的人物，正趴在在五楼走廊正对校门的窗旁鸟瞰大地。迎上去还是悄悄走开？这就是问题所在！——终于压韵了——正在罗斌埋头一边疾走一边思考的时候，周围突然想起一片惊叫声……
+
+罗斌下意识的抬起头，对面一个物体飞快的撞向地面。只听得一声既像硬东西碎裂又像软东西压破的闷响，一团红色飞溅开来。罗斌一惊，连忙跑了过去；他平生第一次见到了尸体：血泊之中，尹思瘦小的身体还在抽动，但白色的脑浆流了一地，眼见是不活了。他竟然真的用生命捍卫了自己的誓言。罗斌的心里顿时被震惊充满，他想大声呼喊，但却发不出声音；他想赶快逃开，但却迈不开步子。他的脑子里只有一句话在反复出现：“我死给你看……我死给你看……”
+
+整整一天，罗斌都在心神不定中度过。他仿佛失去了思考能力，只是单纯的沉浸在感觉之中；奇怪的是，照理说他和尹思的自杀——这个结论倒是显然的——毕竟有一定的联系，但是没有任何人找他进行询问、调查之类的事情。不过幸亏如此，否则谁知道他会怎样回答！尽管这样，他内心里还是感到一种出奇的宁静。并不是镇定之类的感觉，而是好像处在即将涨潮的大海边上！的确，这种死亡未免太简单了一些。连能做到“说干就干”的人都并不多见，更何况“说死就死”了！那个尹思可一点也不像那样的人啊……困惑的罗斌直到放学后去游戏中心玩了一会儿赛车游戏才回过神来，精神完全恢复正常则是转天早晨的事了。
+
+无论是悲伤还是气愤，激动还是绝望，很少有人能将情绪带到一觉之后。早晨起来罗斌想起昨天的事，除了“不可思议”意外，就只剩下“莫名其妙”了——毕竟这才符合他本来的性格。但尹思颅脑破裂的惨状毕竟还是让人心有戚戚，罗斌匆匆替他祈祷了一下，就像往常一样向学校奔去。
+
+途中……（未完待续）
+
+# Invation
+
+“……所以呀，根据这位俄国天文学家的理论，这种事情其实是可以算出来的。宇宙中有多少星系，一个星系中有多少恒星，恒星中又有多少质量可以保证它们稳定的燃烧几百亿年？恒星的行星有多大可能温度在三百开尔文左右，又有多大可能有个三十度左右的黄赤交角？从物种起源到文明出现大约需要多少时间，一个文明发展多少年可以掌握星际旅行，又可以存在多少年？还有星际旅行所需要的时间和方向的正确性，等等等等，把诸如此类的问题尽可能多的考虑进去——只要能提出问题，答案倒不会很难知道；况且我们只需要那么一个大概的数量级——再进行一下简单的乘除法就行了，很容易就可以得出外星人光临地球的概率。具体的数量结果我忘了（不好意思），总之很低就是了。也就是说，讨论外星人存在与否是莫名其妙的：纯粹从“可能性”的角度出发，连猴子都有可能弹出啥啥奏鸣曲，外星人又怎么会完全“不可能”存在呢？但是这种虚无的存在是毫无意义的，至少和地球上出现UfO!没有什么联系。不过话说回来，那些吵吵嚷嚷的自称“地外文明爱好者”的家伙们在乎的哪里是外星人的存在自在性？他们成天乐此不疲的无非是飞碟飞来飞去罢了——不好意思我好像有语病……不过话又说过去，那些基于计算的推测毕竟太过局限于人类目前的知识水平。人类对时间和空间基础理论的认识还并不完善，更不用说对生物甚至思维的存在形式了！但是话又说回来，不可否认，这种推测相对来说还是最科学的。毕竟我们讨论的不是科幻，而是……对了，光顾我自己说了，不好意思。对这个问题你怎么看？”
+
+发出这种刻板但是却很理智的评论的，是我的邻居，人称“假教授”的贾旗先生。他好像是一个网络社区的网管之类的人物，但是我并不很清楚；你知道，像我们这种人，对自己谋生的手段是不会津津乐道的。哦，不要误会，“我们这种人”可不是走黑道的，哈哈。拿我自己来说，我的工作是根据客户的需要绘制插画和搞一些和视觉效果相关的整体设计。值得庆幸的是我所在的公司在这个领域里的口碑还是相当不错的，所以我才能得以过着现在的这种生活；但是在休闲时间，我是不会像那些大科学家一样满脑子都是工作的。怎么说呢？和搞工艺美术的不同，我的工作需要的是天马行空一般的想象力，以带给人们强烈的视觉冲击。听起来挺有意思的，但是你不知道完全放纵自己思想的时候是多么的空虚，尤其是你不得不这样做的时候！说句实话，这个年头真正的“艺术家”真是越来越少了——别和我说什么梅尘、沸冰那些“走在时代前面的青年艺术家”（某杂志语），圈内的人都知道，他们都是靠关系炒出来的。不是我吹，有人炒我我也能成为大师！当然这不过是我一厢情愿的假设罢了。不提这些，再有意思的事干久了都会觉得无聊，有何况是作为谋生手段的工作呢？不知道别人怎么样，反正我是特别讨厌那些询问我工作的详细情况并强行和我讨论的家伙们。将心比心，我想我们这种人对这种问题的态度应该差不多吧！但是和工作无关的兴趣就不一样了……（未完待续）
+
+# Killer
+
+“嗯……防守的中心，胸骨竟然被打漏了……身经百战的‘雷神’怎么会给对手这样的机会？”望着倒在血泊中的二米二十的大汉，陈寞陷入沉思。“换句话说，要怎样才能抓住‘雷神’前胸的破绽，并给予如此狂放的打击？”大汉双目圆瞪，四肢僵直的伸展着，从地上的血迹来判断，一百五十公斤的身体曾被人凌空击出数米。“不知用的是什么格斗技法？难道是古柔道的‘崩拳’……”陈寞苦笑了一下，职业病。眼下哪有时间思考这种东西，陈寞摇摇头，看了看那几个被自己击昏的小喽罗，下意识的整了整白手套，迈开大步，消失在黑夜中。
+
+“迪曼特力，罗马尼亚黑帮“得寇拉”首领，善用匕首，体力充沛。成名前曾在地下竞技场连败八人。二月十日晚与人激烈搏斗，被酒瓶击破头部，伤势过重而死。
+
+“艾尔文·齐藤，日本神枪手，善野战。组织能力出众，十二人‘齐藤组’被称为‘暴走枪兵’，常以疯狂杀人的方法‘劝解’帮派火并。二月二十八日晚齐藤组被人在开阔地正面截击，所有人均被轻机枪爆头（正中头部）而死。”
+
+“阿纳塔拉，埃及地下组织‘司芬克斯’首席打手，使用药物将力量、反应、耐力增至极限，曾将一头雄狮徒手扼死。三月五日晚被人在格斗中将头按到水池里淹死。
+
+“迪杰，墨西哥蹴式拳击家，舞蹈家，以强烈的节奏感闻名。精力旺盛，兴趣是强奸，不分男女人兽。三月十七日晚与人格斗，后脑受重创（“被打得一塌糊涂”，新闻记者语）而死。
+
+“……”（未完待续）
