--- a/_posts/2004-06-26-忏悔室.md
+++ b/_posts/2004-06-26-忏悔室.md
@@ -5,90 +5,200 @@ date:   2004-06-26 20:56:26 +1000
 categories: 小说
 ---
 
-_我记得此文有完全版，再找找_
+按：此文为寂静岭3相关同人小说。请参见寂静岭3完全解析一文。
 
-寂静岭·忏悔室·叙述：Heather Mason aka “谢丽尔”·整理：Leo aka “六月”
+零·寂静岭·忏悔室·叙述：Heather Mason aka “谢丽尔”·整理：Leo aka “六月”
 
-				Silent Hill: Confessional
+# Silent Hill: Confessional
 
+我叫谢丽儿，是个女孩子。在我十七岁的时候，曾经和养父道格拉斯一起去过一个叫做“寂静岭”的北方小镇。具体原因在这儿不便多述，总之，当我独自前往那儿的一个教堂的时候，发生了一件非常“奇妙”的事。
 
-	我叫谢丽儿，是个女孩子。在我十七岁的时候，曾经和养父道格拉斯一起去过一个叫做“寂静岭”的北方小镇。具体原因在这儿不便多述，总之，当我独自前往那儿的一个教堂的时候，发生了一件非常“奇妙”的事。
+我走出气势宏大的礼拜堂之后，顺手捡起了一张绘图粗糙的地图。除了礼拜堂之外，地图上只标明了忏悔室的所在：就在离礼拜堂只有一个过道的地方。
 
-	我走出气势宏大的礼拜堂之后，顺手捡起了一张绘图粗糙的地图。除了礼拜堂之外，地图上只标明了忏悔室的所在：就在离礼拜堂只有一个过道的地方。
+大家都知道，所谓忏悔室，就是那种相邻的两间密闭的小屋。小屋之间通常只有一扇挂着帘子的小窗，一般心里承受着巨大压力的教徒会秘密地走进左边的小屋里，向右边小屋里的神父忏悔让自己寝食难安的事情。忏悔的人物、内容会被近乎绝对地保密，不管其中涉及到什么事情，甚至连杀人也不例外。总之，这样的所在照理说是不会对一个十七岁的女孩儿产生什么吸引力的，但是，由于某种原因，我还是打开了右边小屋的门。
 
-	大家都知道，所谓忏悔室，就是那种相邻的两间密闭的小屋。小屋之间通常只有一扇挂着帘子的小窗，一般心里承受着巨大压力的教徒会秘密地走进左边的小屋里，向右边小屋里的神父忏悔让自己寝食难安的事情。忏悔的人物、内容会被近乎绝对地保密，不管其中涉及到什么事情，甚至连杀人也不例外。总之，这样的所在照理说是不会对一个十七岁的女孩儿产生什么吸引力的，但是，由于某种原因，我还是打开了右边小屋的门。
+那确实是一间非常小的屋子，里面除了一把椅子以外，几乎空无一物。不仅如此，小屋里虽然装璜颇为华丽，但那只能像十字架上的花纹一样，给人以安宁的感觉而已。那里简直一尘不染，我没有发现任何感兴趣的东西。正当我要出去的时候，对面突然传来了声音！
 
-	那确实是一间非常小的屋子，里面除了一把椅子以外，几乎空无一物。不仅如此，小屋里虽然装璜颇为华丽，但那只能像十字架上的花纹一样，给人以安宁的感觉而已。那里简直一尘不染，我没有发现任何感兴趣的东西。正当我要出去的时候，对面突然传来了声音！
+“神父啊……我决定了……我要在这里忏悔，忏悔那件困扰了我三年的罪行……”
 
-	“神父啊……我决定了……我要在这里忏悔，忏悔那件困扰了我三年的罪行……”
+什么？对面的小屋里竟然有人！而且，他似乎已经把我当成了神父！我不是……我的这句话正要脱口而出，他的声音再次响起：
 
-	什么？对面的小屋里竟然有人！而且，他似乎已经把我当成了神父！我不是……我的这句话正要脱口而出，他的声音再次响起：
+“对不起，神父……请不要说任何话……请静静地听完我的忏悔吧。唉……我已经等了三年，为什么现在却连一刻也无法等待了呢？对不起，请原谅我的自言自语，因为我确实有值得忏悔的理由……”
 
-	“对不起，神父……请不要说任何话……请静静地听完我的忏悔吧。唉……我已经等了三年，为什么现在却连一刻也无法等待了呢？对不起，请原谅我的自言自语，因为我确实有值得忏悔的理由……”
+正因为你用了三年时间思考，所以一旦作出了判断，就必须立刻行动，我想。虽然自己不喜欢被误会成别人，不过我又想，难道我有权利拒绝一个一心想诉说自己过去的人，粗暴地用“对不起，我不是神父，再见”来让他再度陷入不安之中吗？不，我并不是刻意要窥探他人的心理，不过对隔壁的陌生人来说，我想就这么让他忏悔并不会有什么不好。何况当时的我也在努力探寻一些“真实”的东西，说起来，难道忏悔不是世界上最真实的意志之一吗？
 
-	正因为你用了三年时间思考，所以一旦作出了结果，就必须立刻作出行动，我想。虽然知道自己不喜欢被误会成别人，不过我又想，难道我有权利拒绝一个一心想诉说自己过去的人，粗暴地用“对不起，我不是神父，再见”来让他再度陷入不安之中吗？不，我并不是刻意要窥探他人的心理，不过对隔壁的陌生人来说，我想就这么让他忏悔并不会有什么不好。何况当时的我也在努力探寻一些“真实”的东西，说起来，难道忏悔不是世界上最真实的意志之一吗？
+这些念头在我脑中一闪而过，我不置可否地咳了一声。对面那个身份不明的男人继续用飘忽不定的语调说道：
 
-	这些念头在我脑中一闪而过，我不置可否地咳了一声。对面那个身份不明的男人继续用飘忽不定的语调说道：
+“神父大人啊……我不想再说什么别的。那件事情发生在三年前，就在这儿，这个叫做‘寂静岭’的小镇里……
 
-	“神父大人啊……我不想再说什么别的。那件事情发生在三年前，就在这儿，这个叫做‘寂静岭’的小镇里……
+“当时我看了一家杂志的介绍，决定独自到这个湖畔的小镇来度过为期一周的假期。和广告上说得一样，这里确实是一处幽雅而安详的所在。无论是建筑还是人们都是那么的‘寂静’，让人感觉不到任何的不适；相反，我相信，所有来过这里的人都会觉得自己会很容易融入这个小镇之中。这确实是我当时的想法，直到假期的第六天……
 
-	“当时我看了一家杂志的介绍，决定独自到这个湖畔的小镇来度过为期一周的假期。和广告上说得一样，这里确实是一处幽雅而安详的所在。无论是建筑还是人们都是那么的‘寂静’，让人感觉不到任何的不适；相反，我相信，所有来过这里的人都会觉得自己会很容易融入这个小镇之中。这确实是我当时的想法，直到假期的第六天……
+“那天，我信步走在大街上，一切还是那样的幽静。我怀着宁静的心情在湖畔公园里慢慢地踱步，在哪里度过了一个清爽而愉快的早晨。但是，当我正要回到旅舍的时候（我觉得住旅舍比住湖畔旅馆更能体会‘居民’的感觉，而这正是我一向追求的），我在公路的天桥上发现了一个非常不和谐的人：一个年轻的乞丐。
 
-	“那天，我信步走在大街上，一切还是那样的幽静。我怀着宁静的心情在湖畔公园里慢慢地踱步，在哪里度过了一个清爽而愉快的早晨。但是，当我正要回到旅舍的时候（我觉得住旅舍比住湖畔旅馆更能体会‘居民’的感觉，而这正是我一向追求的），我在公路的天桥上发现了一个非常不和谐的人：一个年轻的乞丐。
+“‘可怜可怜吧……’伴着明显的外地口音，那个乞丐迎面走了过来。他大概只有二十六、七岁，身上穿着一件已经看不出本来面目的衣服，干裂的嘴唇里是一口焦黄的牙齿，本来不小的眼睛由于阳光的照射眯成了一条缝。他的脏得不成样子的手里握着一个小碗，指甲里满是黑色的泥，不过手并不大，显而易见连哪怕是稍微重一点的家务事都没怎么做过。
 
-	“‘可怜可怜吧……’伴着明显的外地口音，那个乞丐迎面走了过来。他大概只有二十六、七岁，身上穿着一件已经看不出本来面目的衣服，干裂的嘴唇里是一口焦黄的牙齿，本来不小的眼睛由于阳光的照射眯成了一条缝。他的脏得不成样子的手里握着一个小碗，指甲里满是黑色的泥，不过手并不大，显而易见连哪怕是稍微重一点的家务事都没怎么做过。
+“对付这种人，我向来不会采用第二个法子。我沉着脸掏出了手机，当着他的面拨通了警察局的号码。
 
-	“对付这种人，我向来不会采用第二个法子。我沉着脸掏出了手机，当着他的面拨通了警察局的号码。
+“‘警察局吗？’我面无表情地说，‘公路的天桥上有一个外地乞丐。请你们尽管把他收容。对，并非行为艺术者，只是一个单纯的乞丐。谢谢。再见。’
 
-	“‘警察局吗？’我面无表情地说，‘公路的天桥上有一个外地乞丐。请你们尽管把他收容。对，并非行为艺术者，只是一个单纯的乞丐。谢谢。再见。’
+“可想而知，对方的表情一下子变得非常愕然。看得出他的思考能力都因此受到了打击，因为他甚至没有谩骂和逃跑——那正是我打完这种电话后最常看到的两种动作。但我并不打算就此走掉，我有必要告诉他我为什么要这样做。
 
-	“可想而知，对方的表情一下子变得非常愕然。看得出他的思考能力都因此受到了打击，因为他甚至没有谩骂和逃跑——那正是我打完这种电话后最常看到的两种动作。但我并不打算就此走掉，我有必要告诉他我为什么要这样做。
+“‘这是我的原则，’我指着他的鼻子说道，‘虽然我的态度绝对不会谈得上什么礼貌，但我认为这样对你只有好处。你是哪儿来的？我不知道，也并不关心；但是，我要问你一句，究竟是什么让你竟然能作出这种毫无羞耻的事？我们的国家真的已经让你没有办法活下去了吗？我不跟你说什么劳动的意义之类的东西，但我不妨给你算一笔连你也能懂的帐：一个月二百元的失业保障金，平均下来是一天六元六十分。知道这是什么概念吗？在我大学时代，曾经有不少一天吃两顿饭，一顿饭一元主食一元素菜，全天一共花上四元的人！更有一天只吃一元的主食，加上十元可吃上半个月的咸菜的同学！我和一般人一样，一年的租房费用是八百，那些人可以只花到四百，平均三十三元一个月。你有什么资格在这里向我这样的人乞讨？至于工作，我最落魄的时候曾经在建筑工地上干过小工，一天要一直不停地搬砖，一次十块；这样一天也不过二十元，因为没有技术成份。现在受人白眼，看人眼色熬了十年，总算干到一个月一千七百元，每周只有一天休假，一年的有薪假期不过十四天。就这样，我才能得以来到外地，享受一下久违了的宁静生活。可是你呢？你又有什么资格离开自己的家乡，跑到这里向游客乞讨？你的父母如果知道生养了你二十多年后，竟然得到这种结果，过着这种不名誉的生活，他们会有什么想法？听我的话，回家吧！不管怎么样你也不至于就此死掉，如果想有多余的钱娱乐，就去劳动，然后再学习别的技能吧！否则，你就不过只是社会上的垃圾而已！’
 
-	“‘这是我的原则，’我指着他的鼻子说道，‘虽然我的态度绝对不会谈得上什么礼貌，但我认为这样对你只有好处。你是哪儿来的？我不知道，也并不关心；但是，我要问你一句，究竟是什么让你竟然能作出这种毫无羞耻的事？我们的国家真的已经让你没有办法活下去了吗？我不跟你说什么劳动的意义之类的东西，但我不妨给你算一笔连你也能懂帐：一个月二百元的失业保障金，平均下来是一天六元六十分。知道这是什么概念吗？在我大学时代，曾经有不少一天吃两顿饭，一顿饭一元主食一元素菜，全天一共花上四元的人！更有一天只吃一元的主食，加上十元可吃上半个月的咸菜的同学！我和一般人一样，一年的租房费用是八百，那些人可以只花到四百，平均三十三元一个月。你有什么资格在这里向我这样的人乞讨？至于工作，我最落魄的时候曾经在建筑工地上干过小工，一天要一直不停地搬砖，一次十块；这样一天也不过二十元，因为没有技术成份。现在受人白眼，看人眼色熬了十年，总算干到一个月一千七百元，每周只有一天休假，一年的有薪假期不过十四天。就这样，我才能得以来到外地，享受一下久违了的宁静生活。可是你呢？你又有什么资格离开自己的家乡，跑到这里向游客乞讨？你的父母如果知道生养了你二十多年后，竟然得到这种结果，过着这种不名誉的生活，他们会有什么想法？听我的话，回家吧！不管怎么样你也不至于就此死掉，如果想有多余的钱娱乐，就去劳动，然后再学习别的技能吧！否则，你就不过只是社会上的垃圾而已！’
+“说完这些话之后，我自己的心情也变得非常沉重；我知道他绝对不会好受，但我相信，这样对他只有好处。——我真是个傻瓜！——正当我准备转身离去的时候，那个人慢慢地蹲在地上，呜咽着哭了起来，眼泪大滴大滴地落在地上……
 
-	“说完这些话之后，我自己的心情也变得非常沉重；我知道他绝对不会好受，但我相信，这样对他只有好处。——我真是个傻瓜！——正当我准备转身离去的时候，那个人慢慢地蹲在地上，呜咽着哭了起来，眼泪大滴大滴地落在地上。突然！他暴跳起来，抓住了我的衣领，把他那充满口臭的嘴压到了我的鼻子前！
+“突然！他暴跳起来，抓住了我的衣领，把他那充满口臭的嘴压到了我的鼻子前！
 
-	“‘你这个白痴！侏儒！可怜的奴才！’他脸上竟然毫无痛哭的痕迹，恶狠狠地说，‘不要用你的观点强加到我的身上！你可知道“梦想”是什么？你可知道什么是最深的深渊？“绝望”！我现在已经跌到了“绝望”的谷底！我不会向你解释，到底什么样的“恐怖”曾经在我身上发生过，因为我知道你这样的人根本没法理解！我没有资格，我什么也不会说；但是！你的“侮辱”，将会是我记得的最后一件事！’
+“‘你这个白痴！侏儒！可怜的奴才！’他脸上竟然毫无痛哭的痕迹，恶狠狠地说，‘不要用你的观点强加到我的身上！你可知道“梦想”是什么？你可知道什么是最深的深渊？“绝望”！我现在已经跌到了“绝望”的谷底！我不会向你解释，到底什么样的“恐怖”曾经在我身上发生过，因为我知道你这样的人根本没法理解！我没有资格，我什么也不会说；但是！你的“侮辱”，将会是我记得的最后一件事！’
 
-	“说完这话之后，他突然转过身去，纵身从天桥上跳了下去！
+“说完这话之后，他突然转过身去，纵身从天桥上跳了下去！
 
-	“我并不是不想救他，怎么说对生命本身，任何人都会表露自己的尊敬。但是，一切发生得太快了，实在叫人没法反应！受到震惊的我直到听见‘咚’的一声之后，才下意识地向天桥的栏杆冲去。
+“我并不是不想救他，怎么说对生命本身，任何人都会表露自己的尊敬。但是，一切发生得太快了，实在叫人没法反应！受到震惊的我直到听见‘咚’的一声之后，才下意识地向天桥的栏杆冲去。
 
-	“这时，一切突然变得非常寂静。但是！那个人竟然从栏杆上重新爬了上来！他一只手抓住栏杆，一只手指着我说：‘现在！我重新找回了自己的“尊严”！我已经有资格对你说：三年！三年之后，你就会知道“侮辱”了一个“绝望”的人的后果！’
+“这时，一切突然变得非常寂静。但是！那个人竟然从栏杆上重新爬了上来！他一只手抓住栏杆，一只手指着我说：‘现在！我重新找回了自己的“尊严”！我已经有资格对你说：三年！三年之后，你就会知道“侮辱”了一个“绝望”的人的后果！’
 
-	“我的脑中一阵眩晕；等我回过神来的时候，人群的惊叫声、车辆的刹车声已经打破了刚才的寂静。下面的事就不用说了，我接受了警方的调查，在二十四小时之内被释放了；我可以按时回到自己的家，工作也完全没有耽误。警方也一直没有找我，我特地观察了一段寂静岭的报纸，最后发现事件还是以自杀——这也确是事实——而告终。值得一提的是，那个人的身份直到最后也没有查清，而我也无法确切地描述出他的口音究竟出自哪里。
+“我的脑中一阵眩晕；等我回过神来的时候，人群的惊叫声、车辆的刹车声已经打破了刚才的寂静。下面的事就不用说了，我接受了警方的调查，在二十四小时之内被释放了；我可以按时回到自己的家，工作也完全没有耽误。警方也一直没有找我，我特地观察了一段寂静岭的报纸，最后发现事件还是以自杀——这也确是事实——而告终。值得一提的是，那个人的身份直到最后也没有查清，而我也无法确切地描述出他的口音究竟出自哪里。
 
-	“事情看似就这么结束了，我的生活表明上也没有发生任何改变。但是！这其实只是个开始！我仔细地回想了当时的情况：按照报纸的说法，我听到的‘咚’的一声应该是青年乞丐颅脑撞地的声音，他当时完全是以头部朝下的姿势跌下去的。这样只会有一个结果：想想看，天桥的高度有四点二米，而有一个歌手曾经从二米五的高度掉下来就死于非命，原因就是下落的姿势是头朝下。但是！我确切地记得当时的情形；他手攀栏杆对我说话的样子绝对并非我的想象！他的姿势、语气我记得清清楚楚，不可能是我不稳定的精神状态的产物。霍姆斯爵士曾经说过，排除掉一切不可能的，剩下的就一定是真的；可是我既然不知道什么是不可能的，当然也没法得出正确的结论。
+“事情看似就这么结束了，我的生活表明上也没有发生任何改变。但是！这其实只是个开始！我仔细地回想了当时的情况：按照报纸的说法，我听到的‘咚’的一声应该是青年乞丐颅脑撞地的声音，他当时完全是以头部朝下的姿势跌下去的。这样只会有一个结果：想想看，天桥的高度有四点二米，而有一个歌手曾经从二米五的高度掉下来就死于非命，原因就是下落的姿势是头朝下。但是！我确切地记得当时的情形；他手攀栏杆对我说话的样子绝对并非我的想象！他的姿势、语气我记得清清楚楚，不可能是我不稳定的精神状态的产物。霍姆斯爵士曾经说过，排除掉一切不可能的，剩下的就一定是真的；可是我既然不知道什么是不可能的，当然也没法得出正确的结论。
 
-	“就这样，时间又过了三年。这期间有一件事始终困扰着我：我明确地感觉到，自己的身边似乎多了一个东西。这么说也许不太确切，总之，我的精神深处总有一个模糊的东西潜伏着，但它又并非只是精神上的产物；事实上，它能够明确地将自己‘投影’在现实之中，以各种各样奇怪的方式。具体情况我就不说了；因为那些小事以后发生在我身上的事，根本是无法相比的……
+“就这样，时间又过了三年。这期间有一件事始终困扰着我：我明确地感觉到，自己的身边似乎多了一个东西。这么说也许不太确切，总之，我的精神深处总有一个模糊的东西潜伏着，但它又并非只是精神上的产物；事实上，它能够明确地将自己‘投影’在现实之中，以各种各样奇怪的方式。具体情况我就不说了；因为那些小事和以后发生在我身上的事，根本是无法相比的……
 
+“不过得公平地说，那毕竟是事后的看法。事实上，无论是谁，当看到自己周围总是发生一些难以理解的事情，而且越来越明显地持续下去的时候，都会感到难以忍受吧……难道‘未知’不是最可怕的东西吗？我们的童年的夜晚，不就是在对黑暗本身的恐惧中度过的吗？不管怎么说，那人三年前说的话总是在我耳边想起。终于，我做出了决定：重返寂静岭——为了我内心的安宁。我要回到那个地方……在哪儿开始，就要在哪儿结束。”
 
+那个地方吗……忽然，我想到了一个早该注意到的问题：湖畔公园附近有天桥吗？事实上，在整个内森大街（我就是沿着那儿来到这里的）上，我也没发现一座天桥啊……而且，寂静岭这样的小镇哪里有修建天桥的必要？！再怎么说一个宁静而鲜为人知的旅游胜地也不会有“交通果酱”问题啊……等等，这么说，教堂也不应该在游乐场的后面修建啊！……但这些想法并没有给我太大的困扰，因为那个忏悔的男人接下来的话，才是真正“奇妙”而“疯狂”的……
 
+“三年了。三年的时间不算短，不过我的生活倒也没什么特别大的改变——我不知道精神状态是不是应该排除在外——甚至于我前往寂静岭的日期还和三年前一摸一样。当然，我还保有足够的理智，知道这并不是什么了不起的巧合；我自己的休假一向是在这个时间。但是，当我由于某些事耽误了行程，致使我直到第五天晚上才真的赶到寂静岭的时候，我才感到一丝……嗯，可以说是‘不快’吧。‘我为什么会遇到这种事呢？’我当天晚上真的非常气恼，不过这种感觉到了第二天早上就烟消云散了。
 
+“‘不管怎么说，一切就要结束了。’我相信我会让自己的内心得到平静的。我走出了旅舍，来到内森大街，信步走上了天桥。可以想象，在早上，那里空无一人。
 
+“‘这事儿令人遗憾……不过也没有办法。总之，这里就是“那个地方”；我要重新找回自己“安心”的感觉……’我这么对自己说着，慢慢闭上了眼睛。和我事先想象的不同，三年前的那一幕并没有在我的脑海里浮现；我相信，这大概是我一直神经紧张的缘故。当我真的放下心来的时候，寻求‘安心’的愿望就会把不愉快的回忆推到记忆的深处埋藏起来……
 
+“‘等等，’我突然想到了一个问题。我为什么会神经紧张呢？不就是因为那个潜伏在我精神深处，并用自己的方式把自己投影在现实中的东西吗？但是！我已经清楚地感觉到了，那个不请自来的家伙已经无影无踪了！突然解脱的轻松让我差点高兴得跳了起来；我睁开了眼睛，感觉就像获得了重生一样！
 
+“我迈着轻松的步伐走下了天桥，打算沿湖散散步。虽然心情轻松了，但周围越来越重的浓雾让我颇为不快。真是奇怪，这雾似乎是在我闭目思考的时候才出现的；不过我相信，我的好心情不会被这种东西扰乱的。我反而满怀兴味地观察着浓雾里的寂静岭，一切似乎别有一番风味……
 
+“但看着看着，我隐隐感到一切似乎有点不大对头。怎么说呢？比眼前再浓的雾我也见过，可是，按理说雾不是云，如果有风的话很快便会散去；但这里的雾就像是有生命一样，似乎不断地向我扑来。更奇怪的是，无论我朝向哪里，都会有这种感觉。渐渐地，我简直开始怀疑，眼前这雾是不是直接覆盖在了我的心上，不断地向我的意识压迫过来？
 
+“我一面胡思乱想，一面无意识地沿着内森大道走着。突然，我的手机响了；但是，我设定的‘Contra’铃声并没有响起，相反，我的手机发出了一阵奇怪的噪音。这是怎么回事？我正要把手机取出检查一下，但对面的一个人影引起了我的注意。
 
+“在大街上遇到行人当然不是什么奇怪的事，但是，那个人的情形似乎并不如此。怎么说呢？他一步步向前走着，但步伐却非常僵硬，好像每迈出一步就要费尽全力保持平衡一样。出于好奇，我朝着那个人的方向走了过去；但是！我立刻发现，那个家伙根本就不能算是一个人——他，不，应该说是它——它的全身都被一种看上去很像深色塑料布似的东西包裹着，就好像一整块滑腻的垃圾一样；下半身似乎还能看出人形（这也是我一开始能看出它在行走的原因），可上半身的头颅、手臂似乎都残缺不全，而且就像刚才所说，都被某种东西裹了起来。它的身体毫无规律地颤动着，一步步向我逼了过来……
 
+“‘这是什么？！’我不禁骇然失声，好像在凑趣一样，我手机的噪音也更大了。看着那个摇摇晃晃逼近的家伙，我慢慢向后退去。那个东西的上半身好像膨胀了一些，接着又往里一缩。只听‘噗’的一声，它的周围放出了一阵黄色的气体，我连忙闭气，并向后避开，可还是吸入了一些那种气体，一阵恶臭让我一阵眩晕。
 
+“现在我也不知道，自己怎么会有这么大的勇气。我一怒之下，上前一脚就把它踢倒在地。‘原来它也不过如此！’我刚这么想就立刻后悔了，因为这家伙倒下之后似乎反而得其所哉，在地上飞快地向我爬来，一下子就把我撞到在地。幸好我慌乱之中一脚把它踢了出去，然后匆匆爬了起来，连滚带爬地向前跑去。那个东西一边发出‘兹拉兹拉’的声音，一边向我快速爬来……
 
+“我没命地向前跑去，可那个东西实在是太快了，简直和刚才摇摇摆摆行走的时候截然不同。正在我已经感觉它就在我身后一米之内的时候，前方突然出现了一辆停着的汽车。我一下子就窜了上去，暂时躲开了那个怪物的追击。
 
+“等我稍微静下心来之后，我发现了那辆汽车的引擎盖上，竟然赫然插着一根铁棒。虽然这说起来很奇怪——平心而论那确是辆新车——但既然周围有个围着汽车乱爬的怪物，一根铁棒也就算不了什么了，何况……嗯，我心头突然涌上了一股喜悦的感觉——叫你尝尝我的厉害！我抽出那根铁棍，对准在下面盲目打转的怪物，一下子杵了下去！
 
+“啊啊……怪物也会流血吗？！伴着涌出的鲜血，那个东西竟然摇摇晃晃地站了起来！可是，在我的眼中，它已经算不得什么威胁了；它不过是一个到处都是破绽的靶子而已！我一下子从车上跳下，迎头一棒就向它的头上砸去！
 
+“一声闷响过后，怪物并没有倒下，但已经明显地开始摇晃了。我继续用铁棒不停地向它抽去，终于，它‘咕咚’一下栽倒在地。我没有给它逃跑的机会，上前狠命地猛踩刚才用铁棒打出的伤口。一下、两下、三下……它的抽搐终于慢慢停止了，血也流了一地。我没有再看它一眼，提着铁棒继续向前走去。远处，浓雾中隐约可以看到摇摇摆摆的身影，但是，我心中除了一片血红，已经再没有别的东西了……
 
+“但是，在这似乎已经变得疯狂起来的现实之中，我终究还是一个孤独的人啊。我终究是无力的……可是，这又是怎样的现实呢？一人高的巨犬，头颅竟然分成了血淋淋的两片！这样的家伙怎能用铁棍对付？！高达三米的怪物竟然行动矫健，空心肉棍一样手臂一挥两米！整坨散发着腐臭的肉块颤巍巍地站在眼前！浑身长满尖刺的圆形怪物在空中滚动！我就这样，躲避着这些怪物，在街道上无助地跑着。但哪里又是我的归宿呢？我已经完全没有方向感了，可恐惧逐走了我的疲劳；我也许跑了整整一天，因为当我发现周围的浓雾已经完全消散了的时候，天已经完全黑了——就连一丝星光都没有。我抬起头来，前面赫然是一个大门，上面写着‘寂静岭游乐场’。
 
+“天啊！这是一个什么样的所在呀！地面、墙上满是血迹，物品狼藉不堪，就连欢迎小孩子的兔宝宝套装都横七竖八地倒了一片，有的胸前插着匕首，‘伤口’竟然流出大量鲜血；有的头和身体的接合部露出毫无光泽的毛发……我不知自己在这样的地方是怎么保持着没有发疯的——但愿如此——但我同样也不知道自己在那里如何找到了出口。一切就像是做梦一样，记忆不会欺骗，它只是遗忘罢了……终于，当我明确地知道自己身在何处的时候，我已经站在了一座教堂的门口。我的心慢慢平静了下来，但我已经感觉到了，里面确有某种东西在等待着我……
 
+“我推开门，走了进去。
 
+“这是一座宏伟的教堂。我慢慢向前走去。前面有一个人坐在地上；在离他四、五米处的地方，我停下了前进的脚步。那个人慢慢地回过头来。
 
+“‘你来了。’他面无表情地说，但我知道，那不是他的真正想法——如果他有的话。
 
+“‘嗯，’我点点头，‘我来了。正如你说，三年……’
 
+“是的！那个人正是三年前，从天桥上跳下自尽的乞丐！他没有任何变化，无论是外貌还是衣着都和三年前一模一样；除了一点——他的右手拿着一把长达四、五尺的长刀。
+
+“‘现在……你明白了吗？’他问。
+
+“我点了点头。
+
+“‘好吧。’他扬了扬头，‘机会是均等的，一半一半。你还有什么要说的吗？’
+
+“我摇了摇头，扔下手中沾满鲜血的铁棒，从他示意的那个方向的桌子上拿起了和他手中的一模一样的长刀。我知道，这种长刀来自一个叫做Nippon的岛国；和普通刀剑不同，它由于刀身很窄，所以十分灵活，同时又由于其可媲美重剑的长度，可以双手持刀。乞丐的姿势正说明了他是此道高手：他左腿在前，右腿在后，左腿蹬，右腿弓，双手小臂在胸前交叉，左手向内，右手向外，双手紧握刀柄，刀尖直指向前。这是一种攻守兼备的姿势，他正是要用这种力量与技巧结合的方式，来把我推向真正的‘绝望’之中——就像我曾经对他做过的那样！
+
+“但是！‘不过如此而已’！现在的我，已经完全静下心来了……我深深地知道，我能在这里的原因，就是因为我比他强！比三年前的他强！现在，我‘求生存’的愿望，并不在任何人之下！我左腿前右腿后，双膝半蹲，左手横挡在胸前，右手高举，好像把刀背在后背上一样。没错！这样并不是所谓‘武士’的姿势，而是所谓‘忍者’的独特架势！‘武士’架势的关键在于抢攻，发出‘对手破解不了的招式’就是它的目标；可是，‘忍者’的架势却可以灵活地躲闪对手的进攻，并在对手露出破绽的时候给予致命一击！为了这一天，在这三年里，我并没有消极地等待；我有我的策略！
+
+“看到我的架势，对手也明白了我并非易与之辈。他小心地左右移动着，想发现我的破绽。
+
+“没有贸然进攻，正说明了他的实力；但是！‘不过如此罢了’！他的想法始终和三年前一样啊……可怜的家伙！我的右手忽然挥出，把长刀掷了出去！
+
+“这正是我的战术！没人要和你拚刀；我的目的是‘胜利’！要求生存的话，只要在战略上压倒对手就好了！我的长刀脱手后，右手立刻向怀里伸去——这就是我的策略！让他以为我要防守反击，那他就必然不会有着充分的战意，因为盲目的出手会导致失败；而就在他犹豫的时候，我先把长刀掷出，就可以趁他躲闪之际，用手枪击杀他！这手枪正是我为了这个时刻而带在身边的。那么为什么我一开始没有使用呢？因为，如果在太远的时候射击的话，我对自己的枪法并没有太大的把握；而如果在近距离使用，如果被对手看透的话，一样可以在我拔枪的时候截击我。相反，对手在躲避飞来的长刀的时候，一定会穷尽自己身形的变化！而那个瞬间，就是我出手之时！这就是我在对手制定格斗方式的时候所迅速制订的计划！
+
+“但是！出乎我意料的是，在我长刀脱手而出的一瞬间，他竟然飞速奔了过来，并且双手一扬，一下子就磕开了我的长刀！从他的眼睛里，我清楚地看到了这样的话！
+
+“‘花招是没有用的！我已经看透了你的战术；现在，我完全可以在你拔枪之前将你解决；长刀的连续攻击足以让你的枪无法拔出！并且即使拔枪成功，在这种距离也是我占优势：如果你胆敢不闪避而冒险射击的话，一下子就取你性命！’而我闪避的话，又能躲到几何？确实，在眼前这距离，他完全可以逼住我右手的动作。磕开我的长刀后，我已经被纳入了对手长刀的射程；他顺势顺势一刀，从右上至左下向下斩来。自然，虽然我能躲避开，但接下来的长刀连击足以让我一个疏忽之下便命丧黄泉！
+
+“疏忽！是的！表面上看确是如此，但是！真正疏忽的并不是我啊！得知我的长刀已经脱手，手枪也被封住的他才是真正疏忽的人！就在他长刀斩下的一瞬，我在闪避的同时也用左手把腰上别着的一把匕首取了出来；接着，向他怀里一钻！再把左手向他肝脏处一送！……”
+
+忏悔者激动的声音嘎然而止。过了半晌，他的情绪似乎平静了下来，长长地出了一口气，缓缓道：
+
+“这……这就是我在这儿的原因。”
+
+原来如此，我明白了……可是，我要怎么对他说呢？
+
+选择：
+————————
+1、“我原谅你。”
+2、（什么都不说）
+————————
+
+### （“我原谅你”部分，选择了“什么都不说”的读者请跳过这段）
+
+无论如何，一个人“求生存”的意志，也是无人有权抹杀的。他的经历虽然令人遗憾，但又有什么办法呢？我无意间摇了摇头。
+
+“我原谅你。”
+
+我轻轻地说道。
+
+“是吗，我可以得到原谅……神父大人，这真的是您的回答吗……”忏悔者的声音似乎变得像梦呓一样；他断断续续地继续道，“可是啊……神父大人……我刚才的话，还没有说完啊……
+
+“就在我的匕首插进他肝脏的一瞬间，一股鲜血箭一般激射了出来。但我早有准备，用左手挡住了他的血，同时头一低，从他的左腋下钻过，连滚带爬地跑了出去。我可没有‘被’人同归于尽的打算……当我回过头来的时候，那个人竟然还保持着一刀劈空后被偷袭的姿势。显然，这次他‘彻底’地输了。
+
+“我站直了身子，慢慢地把枪拔出，对准了他的脑袋。就算是在最后一刻，我也不会给对手留下任何机会。
+
+“‘这是多余的……’他开口说话的同时，一口鲜血‘噗’地喷了出来。我没有说话，冷冷地保持着原来的姿势。他的手缓缓垂下，长刀‘哐啷’一声掉在地上。他慢慢把头转了过来。
+
+“突然！”忏悔者突然大叫道，“我一下子便愣在那里了！因为……因为那个人的面孔，赫然便是我啊啊啊啊啊啊啊啊啊！！”
+
+“咣！”
+
+随着一声巨响，我们中间隔着的那堵木质的墙被硬生生地撞了开来！一个身形巨大，面目可憎的怪物向我恶狠狠地扑了过来！
+
+“乓！”
+
+“咚……”
+
+……
+
+我慢慢地走出了忏悔室，手里提着一支冒着青烟的霰弹枪。
+
+（第一结局·完）
+
+### （“什么也不说”部分，选择了这部分的读者请继续阅读）
+
+我完全明白了；但是，我的心中却只有悲伤。我感到自己无法回答他什么；我感到，自己已经没法继续呆在这个密闭的空间里了。我奋然推开门，走了出去。
+
+身后一片寂静。
+
+“嘎吱……”
+
+我突然停下脚步；身后，忏悔室的另一扇门慢慢地打开了。
+
+我猛地回过头来。
+
+里面空无一人。
+
+“嗯……”
+
+我微微一笑，回过头，继续向前走去。
+
+（第二结局·完）
+
+（全文完）
 
 创作秘话：
 
-※忏悔者的食宿标准参照了一个叫做Abe的同学，略有夸张。整体福利、待遇、消费水平完全是天津的标准。至于那个一千七百一个月的工作，参考的则是佛山某地的一个企业。
-
-※忏悔者对于乞丐的态度，则是来自于同学Toby。我也干过类似的事儿。
-
-※忏悔者反复强调自己的“正常”其实就说明了他的幻听幻视已经到了很严重的地步。寂静岭就是精神病人的世界……
+- ※忏悔者的食宿标准参照了一个叫做Abe的同学，略有夸张。整体福利、待遇、消费水平完全是天津的标准。至于那个一千七百一个月的工作，参考的则是佛山某地的一个企业。
+- ※忏悔者对于乞丐的态度，则是来自于同学Toby。我也干过类似的事儿。
+- ※忏悔者反复强调自己的“正常”其实就说明了他的幻听幻视已经到了很严重的地步。寂静岭就是精神病人的世界……
