--- a/_posts/2004-06-01-寂静岭三完全解析.md
+++ b/_posts/2004-06-01-寂静岭三完全解析.md
@@ -6,6 +6,8 @@ categories: 游戏攻略
 ---
 
 按：这是我个人最满意的一篇游戏攻略，大概写作于2004年。由于已经和《电子游戏软件》闹翻，我试图向另一家杂志投稿，具体记不太清了，可能是《游戏机实用技术》。编辑表示思路不错，但建议做一些删减；我当时正在准备工作，最终就作罢了。这也代表了我作为游戏撰稿人生涯的正式终结。从1997年开始，我的文章不断在报刊杂志上发表，除了《天津青年报》拖欠最终克扣了稿费，其他媒体在待遇上还是比较厚道的，稿费标准大概是千字30-100元左右。坦白来说，对于学生这并不算少，每个月发表4、5篇就比当时去餐厅之类的地方打工强了。但是这终究不是能养活起一个人的数目。这个话题我在其他地方也有提及。
+
+寂静岭3当时对电脑的要求还挺高的。我当时脸皮非常厚，好友和女友租房同居，我厚颜无耻地跑到人家里玩游戏。这个朋友现在已经变成了非常了不起的人。话说除了我之外我的很多朋友都非常了不起，令我十分佩服。
 <hr>
 2016-05-29
 
