--- a/_posts/2000-01-04-未完成游戏相关作品合集.md
+++ b/_posts/2000-01-04-未完成游戏相关作品合集.md
@@ -31,6 +31,10 @@ categories: 小说 未完成 朵朵
 
 我打算写一个星际争霸的同人，做了一些设定，但最终没有动笔。后来完成度稍高的是写了两章多一点的魔兽3同人“混沌王朝”。
 
+# CPS2秘籍
+
+天知道为什么我把FF8秘籍放到CPS2里。
+
 <hr>
 2016-05-29
 
@@ -464,3 +468,37 @@ The proper Chinese version of above part is reasonable.
 
 The title is not confirmed yet...
 ```
+
+# CPS2秘籍
+
+～～～～
+- Psikyo's Striker 1945 Plus
+- 彩京——打击者1945 Plus
+
+隐藏战机P55：将选机方框移动到？处，输入上下上下上上上上下，？就会变成隐藏战机。
+
+～～～～
+- Final Fantasy VIII
+- 最终幻想8
+
+关于PDA：培养小陆行鸟时，大家都知道，选择关掉事件等待（Event Wait Off）可以很省心地让Boko成长。但是在接近50级的时候一定要打开时间等待（Event Wait On），因为在50级时事件等待打开与否将决定两个不同的事件，打开的话Boko将学会“爆气”类的必杀技（关掉则没有任何附加效果）。
+
+～～～～
+- Street Fighter Zero 3
+- 零式街霸3
+
+```
+隐藏人物：
+在选人画面，把光标移到卡琳处，等待五秒，再把光标移到？处（1P和2P？位置不同），输入：
+开始＋任意键：拳王Bison
+上（或下）＋任意键：Juli
+左（或右）＋任意键：Juni
+```
+
+投币后输入：
+
+按住三脚＋开始：单打的话系统会根据你的角色为你指定一位队友（如隆＋肯，毫鬼＋元……而Juli和Juni有合体超杀哦），双打可任意选人，进行2对1模式，依次打阿顿、毫鬼、魔鬼拳王、魔鬼铁面、魔鬼萨卡特、魔鬼警察（“魔鬼”的意思是什么？看看他们的ISM……Z的空防加上X的超杀蓄力时间、攻击力）。可打出99Hits的超级模式！！两人的体力是分离计算的。
+
+按：不喜欢所有港式翻译的我，当然不会把Zero叫成“少年街霸”（只是不知这是否真的是日本人的叫法？）……记得天师曾在一篇关于街霸三的文章的注上提过“零式街霸”这个翻译，也许是他开玩笑，但是我喜欢:)  如果需要的话这条秘笈还可以写更多的东西，比如Juni的必杀……但是鉴于我给电软的所有电子邮件都没有任何回复，我怀疑自己是否有必要去努力查资料……残念:(
+
+～～～～
