--- a/_posts/2016-05-27-一点说明.md
+++ b/_posts/2016-05-27-一点说明.md
@@ -11,4 +11,6 @@ categories: 说明
 - 落款时间，一般精确到月或者日
 - 通过前后相关文档的落款推测
 
-我在98、99年，放假的时候租过电脑，真正自己买的是在2000年。2006年在深圳买了一台台式机，2008年的时候换成HP V6000装了个黑苹果，年底买了一台MacBook Pro，然后2011年和2014年分别买了一台iMac。经过各种复制备份，很多文档的时间已经变成了，我只能尽量精确地重现写作时间。
+无法确定时间的未完成作品统一标为2000年1月，已完成作品标为2000年2月。但其实我2000年6月才结束高考，之后还做了手术，这些作品最晚也应该是在2000年年底才开始动笔的。
+
+我在98、99年，放假的时候租过电脑，真正自己买的是在2000年底。2006年在深圳买了一台台式机，2008年的时候换成HP V6000装了个黑苹果，年底买了一台MacBook Pro，然后2011年和2014年分别买了一台iMac。经过各种复制备份，很多文档的时间已经变成了，我只能尽量精确地重现写作时间。
