--- a/_posts/2000-01-01-未完成作品合集.md
+++ b/_posts/2000-01-01-未完成作品合集.md
@@ -42,6 +42,31 @@ categories: 小说 未完成 朵朵
 <hr>
 2016-05-28
 
+# AIDS与CIH鉴别分析报告
+
+很早完成的IT小品，因为篇幅太短所以放在这儿了。当年知名度比较高的病毒有CIH、冲击波，还有后来的熊猫烧香等，其中CIH破坏力很大，感染之后硬盘甚至BIOS都有可能被破坏；冲击波则可以无差别攻击局域网内所有没进行安全更新的电脑，导致反复重启，对新装的系统威力特别大。其外就算是新浪等知名网站，网页上也有可能被挂木马，没有相应安全更新的话下载一个图片就有可能让自己的电脑感染木马或病毒。当时可以说是黑客的黄金时期，可惜我没有积极学习相关知识。
+
+# Anice Cat 第二章
+
+如“培训课”中所说，天才猫艾尼丝的故事第一章是写在周记本上的，大意是作家达康带着性别不明的天才猫（从未被第三人称代词称呼过）去朋友家做客的时候，不慎（？）踢了艾尼丝一脚，后者就势开始装疯卖傻。达康历尽千辛万苦（？）而不果，直到第二章开始，才逐渐找到治疗艾尼丝的方法。但是，我并没有真的开始写第二章。
+
+顺便说一句，达康就是Darkon，也就是Brood War里面的Dark Archon（黑暗执政官）。我在报纸上也用过一阵子这个笔名，但是我当时并没有养猫。
+
+# 代理服务器
+
+未完成的IT科普文。
+
+# 荆棘光环
+
+非常无聊的自娱文。
+
+# 青蛙王子
+
+和上文差不多，不过写的更少。至于为什么会有两个土拨鼠键盘而且一模一样，这本身就是一个神秘的故事了。
+
+<hr>
+2016-06-05
+
 # 平淡无聊的小故事一·“座右铭的故事”
 
 “……你看，那个阴沉的家伙，实在是……”
@@ -116,7 +141,7 @@ categories: 小说 未完成 朵朵
 
 （待续）
 
-# 朵朵的奇妙冒险第二章
+# 朵朵的奇妙冒险第二章·培训课（暂名）
 
 - Li Bizarre Avventure de Dodo
 - Second Bang
@@ -423,3 +448,189 @@ Show you my Death
 “迪杰，墨西哥蹴式拳击家，舞蹈家，以强烈的节奏感闻名。精力旺盛，兴趣是强奸，不分男女人兽。三月十七日晚与人格斗，后脑受重创（“被打得一塌糊涂”，新闻记者语）而死。
 
 “……”（未完待续）
+
+# AIDS与CIH鉴别分析报告
+
+```
+名称：		AIDS		CIH
+危害：		恐怖		恐怖
+变种：		有		有
+传播途径1：	母->婴传播	软盘->硬盘传播		
+传播途径2：	血液流通传播	网络流通传播		
+传播途径3：	不洁XX传播	不洁光盘传播		
+```
+
+# Anice Cat 第二章
+
+...
+
+	于是达康化名“天才猫”，进入了“动物庄园”的“家庭宠物社区”。以下就是达康在的那段时间的聊天记录。
+
+	天才猫：啊啊……大家好吗？
+
+（未完待续）
+
+# 代理服务器
+
+所谓“代理服务器”(Proxy Server)，指的是在上网的时候，与提供代理服务器服务的服务器建立起连接后，上网浏览时向代理服务器发出请求，由代理服务器将文件下载在服务器的硬盘上，再转发至发出请求的客户机上。对客户机来说，这样有两个好处：其一，代理服务器的带宽一般较大，速度相对更快，而且硬盘较大，可以把以前浏览过的网站储存在磁盘里，如果你要浏览的网站在代理服务器上，速度可以更快；其二，通过代理服务器上网，也起到了防火墙的作用，就不怕挨IP炸弹啦。其实，就现在的情形来说，代理服务器无论是应用在拨号上网方面还是局域网方面，都没有明显的速度优势；它主要还是用于获得更高的浏览权限，比如169 用户可以通过代理服务器访问国外站点。而且有些站点根据IP地址屏蔽了某些地区的用户，如xoom, geocities等等。（注：中国电信颇为复杂，屏蔽情况比较奇怪。有些地区xoom没有被屏蔽，有些地区Geocities没有被屏蔽……在下这里倒是都被封了，残念。）他们对我们来说通常是不可访问的，设置适当的代理服务器就可以解决这个问题。	
+
+# 荆棘光环
+
+（一）
+
+by 大男孩儿 4 小螃蟹;)
+
+男孩中午放学回家，猛地推开门，看到小螃蟹站在水池边，“噗吐噗吐”地吐着白泡泡，吓得一屁股坐在地上；定下神来仔细一瞧，才发现小螃蟹右钳子里夹着一把小牙刷，身边放着一个小口杯——一个青蛙口杯，男孩也有一个一模一样的，当然大得多。于是男孩儿奇怪又略带不满地问：“今天你怎么这么晚才起床？”
+
+小螃蟹继续“噗吐噗吐”地吐着泡泡，左钳子向背后的写字台一指，男孩这才想起来昨天晚上叫小螃蟹帮忙抄学习资料的事。“嘿嘿……没想到你抄到这么晚。”男孩挠了挠脑袋，赔笑着说。小螃蟹没有理他，把嘴漱得干干净净，跳下水池，向厨房走去。男孩连忙跟了进去，正好听见微波炉“叮”的一声，原来是小螃蟹知道他要回来，就先把饭菜热好了。他们把饭菜和碗筷端进屋里，打开电视，一边看中午的动画片一边吃起饭来。
+
+男孩今年其实不小了，但是由于他还在上中学，所以还是个男孩儿——不过是大男孩儿。他的年龄比同班同学大不少，这倒不是他要向有名的草雉京学习，作“万年留级男”，而是因为他上中学后，觉得学校的水平太低，没有配出题考他的老师，所以一直拒绝参加考试的缘故。与他懒散的性格不同，小螃蟹一向相当勤奋，常常练习隶书——如果把草书当成行书，那么行书就是隶书了；同样，如果把楷书当成行书，那么隶书就相当于楷书——不过不是临习碑帖，而是写一些隽永而意境清远或有感而发的原创作品。或者就做数学大家吉米诺维奇的著名的吉米诺维奇数学分析习题集，据大男孩儿估计，很有可能已经做过不止一遍了。昨天晚上，大男孩儿忙着搞小制作——不是为了什么发明竞赛，而是一些精巧好用的工具——就让小螃蟹帮忙抄他积下好几周的“大学英语电视趣味教学”的录像带的笔记。学习资料本来就不少，小螃蟹又刚刚完成了定积分近似计算的计算机程序，累得很，就一觉睡到了中午。其实，也难怪大男孩儿奇怪，小螃蟹一向是作息很有规律的。
+
+（未完待续******）
+
+To be Continued...
+
+(preview: lanch, talk 'bout things o'schoot...)
+
+（二）
+
+大男孩儿和小螃蟹一边吃着微波炉烤的猪肉卷，一边津津有味地看着动画片“加菲猫和朋友们”。到插播广告的时间，大男孩儿说：“今天学校里发生了一件……嗯，也谈不上特别不寻常，只是不能说很一般的事。”
+
+小螃蟹正在用钳子插一块猪肉卷，没顾得理他。大男孩儿接着说：“今天学校上空一直飘着一个飞碟，可能昨天晚上就在那里了。那个飞碟的外壳好像使用钛合金做的，直径大概十米，可能有两米高，不过由于停在厕所上空，所以倒也没挡阳光——我不得不指出其所在的方位很不适于偷窥——那个飞碟并不是一个整体，金属板之间有接合的痕迹……”
+
+广告完了，小螃蟹摆了摆钳子上的猪肉卷，示意了一下。这一集的内容是“加菲猫感恩节特别篇”，可是由于有护士小姐丽兹出场，就被不知道哪个蠢家伙翻译成了“加菲猫看医生”。其中有一段加菲猫的主人乔恩做感恩节火鸡，他先是忘了提前四小时把火鸡从冰箱里取出，然后又把二百度的火烤五分钟当成了五百度的火烤两分钟……当看到说明书上的“然后涂满黄油”后，乔恩奇怪的说：“这会好吃吗?”然后在自己的脸上和手上涂满的黄油……看得大男孩儿和小螃蟹笑个不停。乔恩真是太傻啦！
+
+动画片完了，大男孩儿接着说：“当然，那个飞碟肯定只是个玩笑——外星人如果真用那种比地球上高明不了多少的低劣的技术进行宇宙旅行就怪了——我估计是从外国新进口的高级玩具——不过我想一定很值钱，如果不是出现在期末考试前期，恐怕真的会引起广泛关注呢！”
+
+说完，大男孩儿洗了个脸，换了一件凉快一点的衣服，拿起英语学习资料走了出去——他答应同学洁洁借她看看，这也正是他急着让小螃蟹帮忙整理出来的缘故。小螃蟹也爬上电脑桌，忙着把定积分近似运算作为一个组件添加到以前编的“高等数学计算实用程序”中去。
+
+（未完待续……）
+
+To be continued...
+
+（三）
+
+晚上大男孩儿回来的时候，小螃蟹已经完成了自己的工作，正在聚精会神地浏览关于外星人的信息。说起来，大男孩儿实在是为小螃蟹做了不少好事，举个例子，小螃蟹虽然幸运地可以使用拥有两个按键的鼠标，但对一位高级用户来说（尤其是程序员，即使是小螃蟹也不例外），怎么可以没有一个好用的键盘呢？幸运的是，有一天，大男孩儿去逛二手货市场，竟然发现了一个土拨鼠专用电脑键盘！说起来也真有趣，键盘的主人养了一只土拨鼠，他非认为他的土拨鼠是天才土拨鼠，于是这位电子硕士费了九个大招的力气，作了这麽一个土拨鼠专用键盘。其实这世上有理性的动物实在很少，电子硕士又费了九个大招的力气，才认清了自己的失败；小螃蟹也就这么得到了通往信息世界的自行车。客观地说，知识以数字信号为载体实在比以纸张为载体的传播效率高的多，所以小螃蟹很高兴。更难能可贵的是大男孩儿并不居功自傲，他还总是为不能找到土拨鼠专用鼠标而自责呢。因为这个原因，小螃蟹虽则自己也很忙，但还是会把大男孩儿的是放在心（如果有的话）上。
+
+大男孩儿看见小螃蟹指着显示器让他看，连忙凑了过去。只见上面写着：“……XX Ufo FAQ（按：FAQ=Frequently asked questions，经常被问起的问题）……人们为什么通常都认为外星人乘坐的飞行器是圆的？——科学家普遍认为，从真正的实际意义角度来讲，人类还没有能力对宇宙航行做出评价。相对论并没有向我们揭示出如何利用时空相对性的具体途径，把宇航员冻上几十年进行星际航行实在是可笑的主意，问题的关键还是物理学的基础理论体系的进一步建立……人类无法理解为什么外星人乘坐的飞行器是圆的，唯一可能的解释是，这是大多数“飞碟目击者”所指出的形状，而其实他们真正“目击”的，只是一些云朵反光等自然现象……波波博士认为，科学的发展是一条先远离自然，再回到自然的非线性曲线，而最自然的几何图形莫过于圆形，与之对应的表示方形，人类的科技水平还处在“方形”的地位，而能进行星际航行的外星智慧生物已经发展到了“圆形”的“回归且融于自然”境界——这种强行把某种哲学观点代入并指导其它学科的所谓理论，是一个真正的物理学家，甚或仅仅是一个物理爱好者也不能接受的……”
+
+大男孩儿摇了摇头：“现在净是这种不得要领的东西——IPv6协议取代IPv4协议后，接入广域网的计算机的数目可以提高到79228162514264337593543950336 倍，这意味着这种傻瓜文章只会越来越多——但是且慢，六月这个人你知道吗？他今天下午对那个飞碟特别感兴趣，一直在学校里窜来窜去，以便找到合适的角度与飞碟合影……”
+
+（未完待续）
+
+To be continued...
+
+(Preview: crabbie no june then sth 'bout jj and so on...)
+
+PS: Dr. Pawpaw——木瓜博士。
+
+（四）
+
+六月是大男孩儿的同班同学，对这个人，小螃蟹倒也略有耳闻。那是一个所谓“杂家”的人物，什么都懂一点，但对什么也没有深入的了解，又没有自知之明，所以常常闹一些乱七八糟的笑话。他总喜欢用一些乏味的双关语，比如“六月”这个绰号，就是用他的名字做的双关语；除此之外他甚至把他的名字、星座、最喜欢的游戏的主角的名字、血型什么的做了一个四关语（想要这个莫明其妙的家伙的邮件地址的请与大男孩儿联系）。这个人除了包括性格在内，各个方面无不畸形——长相与其说是上帝在造他时敷衍了事，不如说是上帝的恶作剧的产物；说话声音就像内容一样单调，偏偏又自认为很有魅力，说起话来就像唐僧一样喋喋不休。由于大男孩儿对自己很严格，常常把自己搞得精疲力竭，所以并不在乎偶尔拿六月轻松轻松，同时也就获得了六月“有城府”、“有头脑”、“有见识”的评价。有时世事往往如此，就连当事者也不知，我们又何苦点破呢？不过不管怎么样，小螃蟹想到六月的尊容和他在学校里窜来窜去的样子，也不禁莞尔。
+
+大男孩儿接着说：“你帮我抄的学习资料我借给洁洁了。她很是道了一番谢，还称赞我的字写得好呢。我正不知说什么好，六月那个家伙窜了过来，仔细研究了一番，又看了看我的笔记本，大声称赞道：‘啊呀，你真是不简单，一笔能写出几种笔体，变化百端，出神入化，神出鬼没，随机百变，卓而不群，佩服佩服！’马上围上来一帮人——如果我不知道他的性格，还真会以为他成心拆我台呢——弄得我只好解释说，是请一个朋友帮忙整理的。那个家伙摇着头，笑眯眯地说：‘唉，定是近朱赤友，高雅清远，亭亭静直，群而不党……’弄得洁洁一直在偷偷地笑。”
+
+洁洁是大男孩儿的同桌的同学——二人同桌从某方面来讲不失为一种不错的制度——虽然不算漂亮，但却是一个可爱的女孩子。说起来，在大男孩儿的班里，单从长相而论，除了大男孩儿和洁洁“很一般”（六月的口头语），其他人都是不折不扣的极端：n个帅哥/美女和3n个畸形（n属于N）。像所有长相一般、天真可爱的女孩子一样，洁洁不算聪明，学习很用功，但又不会给人带来压力；课余是一个不算活泼但很轻松的人。对大男孩儿来讲，她是一个难得的总是令人愉快的好同桌，大男孩儿也许会因为她的缘故选择参加考试呢。
+
+未完，待续******
+
+To be continued... And the main event might start tomorrow! Prepare yourself, friends!!
+
+（五）
+
+说起洁洁，小螃蟹对她的印象倒不怎么深刻。作为一只有理性的动物，小螃蟹崇尚时刻都保持着富有逻辑的审慎思维，说起来，所谓可爱难道不是纯粹出于感性的概念吗？难道在评判一件事物是否“可爱”时，人类引以自豪的包含逻辑推理、综合分析的思维方式能起得上什么作用吗？过于重视精神世界使小螃蟹对绒毛（茸毛？）玩具啊，追自己尾巴的小狗啊，咪咪叫的小猫啊什么的可爱之处漠不关心，自然，对洁洁这样的单纯善良的人——所谓“单纯”、“善良”难道不是出自感性儿不是理性的概念吗？——小螃蟹并不怎么尊敬。当然，这一点小螃蟹倒没有跟大男孩儿明确表示，毕竟坚持自己的精神理念和得罪别人是两个概念。
+
+但是眼下，完成了一件值得一提的工作后，小螃蟹的注意力转移到了那个愚蠢的飞碟上。钛合金，不知道是怎么想的！换句话说，真是一个缺乏想象力的主意。难道所有智慧生物对事物的认识都一样？！合金，哼哼。如果让小螃蟹策划的话，有机机械（所谓Bio-Mech，好处是看上去很硬派）是上上之选，力场加液体和有机组织效果也很好——虽然价格不菲，但钛合金也不便宜——实在不行做成宇宙螃蟹型的也可以呀，为什么非要采用比雪茄形飞船还没创意的飞碟形呢？现在的人真是的……连脑袋都懒得动一动，哪能这么搞恶作剧呀！小螃蟹决定亲自去看一看那个东西又没有一点值得借鉴的东西——虽然愚蠢，毕竟也没人搞过这样的东西——然后让大男孩做一个更好的，再做一个专题网站，把所有关于飞碟的愚蠢主意一网骂尽，能挑起一场和飞碟爱好者的论战就更好啦，就可以好好地乐一下子啦。和大男孩儿一样，小螃蟹一向认为乱七八糟的夹杂着人身攻击的论战是很有趣味的事。
+
+“嗯……好吧！不过明天上午不行。”大男孩儿说，“‘我爱小螃蟹’网站很久没更新了，很多爱好者都提出了抗议，今天晚上咱们把框架打好，明天上午你把内容填进去。下午我陪你好好研究研究，再考虑考虑你的那个主意。”
+
+——“我爱小螃蟹”网站到底是什么内容的呢？呵呵，那就是题外话啦，你阁下有兴趣可以自己去http://ilovecrab.myetang.com看看:)
+
+wei wan, dai xu hehe ~~~~~~~2B CoNTiNuEd...
+
+May ya' happie & happppiiiiiiiiiiiiiiiiii~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+（六）
+
+于是大男孩儿和小螃蟹兴冲冲的忙了一晚。他们做梦也想不到，等待他们的，是一个前所未有的大危机！
+
+时间就是这样……（未完待续）
+
+*	*	*	*	*	*	*	*	*
+
+# 荆棘光环（整合版）
+
+by 大男孩儿 4 小螃蟹 ^^
+
+第一章 
+
+男孩儿中午放学回家，猛地推开门，看到小螃蟹站在水池边，“噗吐噗吐”地吐着白泡泡，吓得一屁股坐在地上；定下神来仔细一瞧，才发现小螃蟹右钳子里夹着一把小牙刷，身边放着一个小口杯——一个青蛙口杯，男孩儿也有一个一模一样的，当然大得多。于是男孩儿奇怪又略带不满地问：“今天你怎么这么晚才起床？”
+
+小螃蟹继续“噗吐噗吐”地吐着泡泡，左钳子向背后的写字台一指，男孩儿这才想起来昨天晚上叫小螃蟹帮忙抄学习资料的事。“嘿嘿……没想到你抄到这么晚。”男孩儿挠了挠脑袋，赔笑着说。小螃蟹没有理他，把嘴漱得干干净净，跳下水池，向厨房走去。男孩儿连忙跟了进去，正好听见微波炉“叮”的一声，原来是小螃蟹知道他要回来，就先把饭菜热好了。他们把饭菜和碗筷端进屋里，打开电视，一边看中午的动画片一边吃起饭来。
+
+男孩儿今年其实不小了，但是由于他还在上中学，所以还是个男孩儿——不过是大男孩儿。他的年龄比同班同学大不少，这倒不是他要向有名的草雉京学习，作“万年留级男”，而是因为他上中学后，觉得学校的水平太低，没有配出题考他的老师，所以一直拒绝参加考试的缘故。与他懒散的性格不同，小螃蟹一向相当勤奋，常常练习隶书——如果把草书当成行书，那么行书就是隶书了；同样，如果把楷书当成行书，那么隶书就相当于楷书——不过不是临习碑帖，而是写一些隽永而意境清远或有感而发的原创作品。或者就做数学大家吉米诺维奇的著名的吉米诺维奇数学分析习题集，据大男孩儿估计，很有可能已经做过不止一遍了。昨天晚上，大男孩儿忙着搞小制作——不是为了什么发明竞赛，而是一些精巧好用的工具——就让小螃蟹帮忙抄他积下好几周的“大学英语电视趣味教学”的录像带的笔记。学习资料本来就不少，小螃蟹又刚刚完成了定积分近似计算的计算机程序，累得很，就一觉睡到了中午。其实，也难怪大男孩儿奇怪，小螃蟹一向是作息很有规律的。
+
+大男孩儿和小螃蟹一边吃着微波炉烤的猪肉卷，一边津津有味地看着动画片“加菲猫和朋友们”。到插播广告的时间，大男孩儿说：“今天学校里发生了一件……嗯，也谈不上特别不寻常，只是不能说很一般的事。”
+
+小螃蟹正在用钳子插一块猪肉卷，没顾得理他。大男孩儿接着说：“今天学校上空一直飘着一个飞碟，可能昨天晚上就在那里了。那个飞碟的外壳好像使用钛合金做的，直径大概十米，可能有两米高，不过由于停在厕所上空，所以倒也没挡阳光——我不得不指出其所在的方位很不适于偷窥——那个飞碟并不是一个整体，金属板之间有接合的痕迹……”
+
+广告完了，小螃蟹摆了摆钳子上的猪肉卷，示意了一下。这一集的内容是“加菲猫感恩节特别篇”，可是由于有护士小姐丽兹出场，就被不知道哪个蠢家伙翻译成了“加菲猫看医生”。其中有一段加菲猫的主人乔恩做感恩节火鸡，他先是忘了提前四小时把火鸡从冰箱里取出，然后又把二百度的火烤五分钟当成了五百度的火烤两分钟……当看到说明书上的“然后涂满黄油”后，乔恩奇怪的说：“这会好吃吗?”然后在自己的脸上和手上涂满的黄油……看得大男孩儿和小螃蟹笑个不停。乔恩真是太傻啦！
+
+动画片完了，大男孩儿接着说：“当然，那个飞碟肯定只是个玩笑——外星人如果真用那种比地球上高明不了多少的低劣的技术进行宇宙旅行就怪了——我估计是从外国新进口的高级玩具——不过我想一定很值钱，如果不是出现在期末考试前期，恐怕真的会引起广泛关注呢！”
+
+说完，大男孩儿洗了个脸，换了一件凉快一点的衣服，拿起英语学习资料走了出去——他答应同学洁洁借她看看，这也正是他急着让小螃蟹帮忙整理出来的缘故。小螃蟹也爬上电脑桌，忙着把定积分近似运算作为一个组件添加到以前编的“高等数学计算实用程序”中去。
+
+晚上大男孩儿回来的时候，小螃蟹已经完成了自己的工作，正在聚精会神地浏览关于外星人的信息。说起来，大男孩儿实在是为小螃蟹做了不少好事，举个例子，小螃蟹虽然幸运地可以使用拥有两个按键的鼠标，但对一位高级用户来说（尤其是程序员，即使是小螃蟹也不例外），怎么可以没有一个好用的键盘呢？幸运的是，有一天，大男孩儿去逛二手货市场，竟然发现了一个土拨鼠专用电脑键盘！说起来也真有趣，键盘的主人养了一只土拨鼠，他非认为他的土拨鼠是天才土拨鼠，于是这位电子硕士费了九个大招的力气，作了这麽一个土拨鼠专用键盘。其实这世上有理性的动物实在很少，电子硕士又费了九个大招的力气，才认清了自己的失败；小螃蟹也就这么得到了通往信息世界的自行车。客观地说，知识以数字信号为载体实在比以纸张为载体的传播效率高的多，所以小螃蟹很高兴。更难能可贵的是大男孩儿并不居功自傲，他还总是为不能找到土拨鼠专用鼠标而自责呢。因为这个原因，小螃蟹虽则自己也很忙，但还是会把大男孩儿的是放在心（如果有的话）上。
+
+大男孩儿看见小螃蟹指着显示器让他看，连忙凑了过去。只见上面写着：“……XX Ufo FAQ（按：FAQ=Frequently asked questions，经常被问起的问题）……人们为什么通常都认为外星人乘坐的飞行器是圆的？——科学家普遍认为，从真正的实际意义角度来讲，人类还没有能力对宇宙航行做出评价。相对论并没有向我们揭示出如何利用时空相对性的具体途径，把宇航员冻上几十年进行星际航行实在是可笑的主意，问题的关键还是物理学的基础理论体系的进一步建立……人类无法理解为什么外星人乘坐的飞行器是圆的，唯一可能的解释是，这是大多数“飞碟目击者”所指出的形状，而其实他们真正“目击”的，只是一些云朵反光等自然现象……波波博士认为，科学的发展是一条先远离自然，再回到自然的非线性曲线，而最自然的几何图形莫过于圆形，与之对应的表示方形，人类的科技水平还处在“方形”的地位，而能进行星际航行的外星智慧生物已经发展到了“圆形”的“回归且融于自然”境界——这种强行把某种哲学观点代入并指导其它学科的所谓理论，是一个真正的物理学家，甚或仅仅是一个物理爱好者也不能接受的……”
+
+大男孩儿摇了摇头：“现在净是这种不得要领的东西——IPv6协议取代IPv4协议后，接入广域网的计算机的数目可以提高到79228162514264337593543950336 倍，这意味着这种傻瓜文章只会越来越多——但是且慢，六月这个人你知道吗？他今天下午对那个飞碟特别感兴趣，一直在学校里窜来窜去，以便找到合适的角度与飞碟合影……”
+
+六月是大男孩儿的同班同学，对这个人，小螃蟹倒也略有耳闻。那是一个所谓“杂家”的人物，什么都懂一点，但对什么也没有深入的了解，又没有自知之明，所以常常闹一些乱七八糟的笑话。他总喜欢用一些乏味的双关语，比如“六月”这个绰号，就是用他的名字做的双关语；除此之外他甚至把他的名字、星座、最喜欢的游戏的主角的名字、血型什么的做了一个四关语（想要这个莫明其妙的家伙的邮件地址的请与大男孩儿联系）。这个人除了包括性格在内，各个方面无不畸形——长相与其说是上帝在造他时敷衍了事，不如说是上帝的恶作剧的产物；说话声音就像内容一样单调，偏偏又自认为很有魅力，说起话来就像唐僧一样喋喋不休。由于大男孩儿对自己很严格，常常把自己搞得精疲力竭，所以并不在乎偶尔拿六月轻松轻松，同时也就获得了六月“有城府”、“有头脑”、“有见识”的评价。有时世事往往如此，就连当事者也不知，我们又何苦点破呢？不过不管怎么样，小螃蟹想到六月的尊容和他在学校里窜来窜去的样子，也不禁莞尔。
+
+大男孩儿接着说：“你帮我抄的学习资料我借给洁洁了。她很是道了一番谢，还称赞我的字写得好呢。我正不知说什么好，六月那个家伙窜了过来，仔细研究了一番，又看了看我的笔记本，大声称赞道：‘啊呀，你真是不简单，一笔能写出几种笔体，变化百端，出神入化，神出鬼没，随机百变，卓而不群，佩服佩服！’马上围上来一帮人——如果我不知道他的性格，还真会以为他成心拆我台呢——弄得我只好解释说，是请一个朋友帮忙整理的。那个家伙摇着头，笑眯眯地说：‘唉，定是近朱赤友，高雅清远，亭亭静直，群而不党……’弄得洁洁一直在偷偷地笑。”
+
+洁洁是大男孩儿的同桌的同学——二人同桌从某方面来讲不失为一种不错的制度——虽然不算漂亮，但却是一个可爱的女孩子。说起来，在大男孩儿的班里，单从长相而论，除了大男孩儿和洁洁“很一般”（刘月的口头语），其他人都是不折不扣的极端：n个帅哥/美女和3n个畸形（n属于N）。像所有长相一般、天真可爱的女孩子一样，洁洁不算聪明，学习很用功，但又不会给人带来压力；课余是一个不算活泼但很轻松的人。对大男孩儿来讲，她是一个难得的总是令人愉快的好同桌，大男孩儿也许会因为她的缘故选择参加考试呢。
+
+说起洁洁，小螃蟹对她的印象倒不怎么深刻。作为一只有理性的动物，小螃蟹崇尚时刻都保持着富有逻辑的审慎思维，说起来，所谓可爱难道不是纯粹出于感性的概念吗？难道在评判一件事物是否“可爱”时，人类引以自豪的包含逻辑推理、综合分析的思维方式能起得上什么作用吗？过于重视精神世界使小螃蟹对绒毛（茸毛？）玩具啊，追自己尾巴的小狗啊，咪咪叫的小猫啊什么的可爱之处漠不关心，自然，对洁洁这样的单纯善良的人——所谓“单纯”、“善良”难道不是出自感性儿不是理性的概念吗？——小螃蟹并不怎么尊敬。当然，这一点小螃蟹倒没有跟大男孩儿明确表示，毕竟坚持自己的精神理念和得罪别人是两个概念。
+
+但是眼下，完成了一件值得一提的工作后，小螃蟹的注意力转移到了那个愚蠢的飞碟上。钛合金，不知道是怎么想的！换句话说，真是一个缺乏想象力的主意。难道所有智慧生物对事物的认识都一样？！合金，哼哼。如果让小螃蟹策划的话，有机机械（所谓Bio-Mech，好处是看上去很硬派）是上上之选，力场加液体和有机组织效果也很好——虽然价格不菲，但钛合金也不便宜——实在不行做成宇宙螃蟹型的也可以呀，为什么非要采用比雪茄形飞船还没创意的飞碟形呢？现在的人真是的……连脑袋都懒得动一动，哪能这么搞恶作剧呀！小螃蟹决定亲自去看一看那个东西又没有一点值得借鉴的东西——虽然愚蠢，毕竟也没人搞过这样的东西——然后让大男孩做一个更好的，再做一个专题网站，把所有关于飞碟的愚蠢主意一网骂尽，能挑起一场和飞碟爱好者的论战就更好啦，就可以好好地乐一下子啦。和大男孩儿一样，小螃蟹一向认为乱七八糟的夹杂着人身攻击的论战是很有趣味的事。
+
+“嗯……好吧！不过明天上午不行。”大男孩儿说，“‘我爱小螃蟹’网站很久没更新了，很多爱好者都提出了抗议，今天晚上咱们把框架打好，明天上午你把内容填进去。下午我陪你好好研究研究，再考虑考虑你的那个主意。”
+
+于是大男孩儿和小螃蟹兴冲冲的忙了一晚。他们做梦也想不到，等待他们的，是一个前所未有的大危机！
+
+PS: 
+
+Dr. Pawpaw——木瓜博士。
+
+——“我爱小螃蟹”网站到底是什么内容的呢？呵呵，那就是题外话啦，你阁下有兴趣可以自己去http://ilovecrab.myetang.com看看:)
+
+# 青蛙王子
+
+“现代社会中，最可怕的事莫过于停电了。没有空调、电扇会把人热死，没有微波炉、电饭锅会把人饿死，没有电灯、电脑会把人们闷死——幸好现在是秋天下午，暂时没有热死、饿死之虞；至于闷死，一时半会倒也不必多虑。”小琪一边说，一边拿出一盒“大富翁”的游戏棋。
+
+大富翁是一种立足于投资的游戏棋，当然也少不了相当大的随机性。投资和运气，这又和人们引以为豪的理性有什麽关系呢？王子暗暗摇头；但想到读了一上午书，还是放松一下吧，于是点了点头，和小琪大战了起来。
+
+虽然大富翁的复杂性远远不能和龙与地下城之类的角色扮演游戏棋相比，但要玩完一盘也着实不易。有很多人误认为大富翁游戏棋需要一定的投资理念，其实由于规则太过简单，各人的投资理念实在没有什麽差别；倒是大鱼吃小鱼的情形显露无疑。游戏一开始人人平等，运气的成分把差别加大；但此消彼长，渐渐的资本多者控制了局面，游戏也就快要结束了。好比蝴蝶效应，一开始运气就是蝴蝶的翅膀，但暴风一起，却是成千上万的蝴蝶也挡不住的。在王子看来，这道理相当显白，就好像如果你的账户上有Ｎ大于０元，如果对于一个任意给定的钱数Ｍ大于０，总有Ｎ大于Ｍ，则你的钱永远花不完一样；但小琪却不明白，她不懂得“随大势”乃是大富翁的唯一正确玩法——同时也是其无聊之处——所以她总是拼命使用各种技巧，甚至进行一些复杂的古典概率演算，到头来胜了固然为自己的徒劳努力沾沾自喜，败了也大吵大叫，认为岂有此理。王子本来早就想点明，但转念一想，如果小琪对大富翁失去了兴趣，游戏棋不是白买了吗？王子可是向来十分爱惜财力、物力的。
+
+按照经典概率理论，先验性随机变量的数学期望分布是相等的，现下可是王子占了那胜的二分之一。小琪还在想着如何用技巧加上可能的运气挽回颓势，但一下踏入了王子的豪华宾馆，于是立即提议道：“算平局吧。”王子摇了摇头，想了一下，又点了点头。“并且我们还要完成那个魔法配方呢。”她补充道。王子颇有城府地笑了一下，返回青蛙口杯，舒舒服服地躺了下来。
+
+王子是一只青蛙，浑身绿色，肚皮雪白雪白，有点儿胖；一双大眼睛炯炯有神，配上那张不常微笑的大嘴巴，显得严肃而有威信。其实王子不太喜欢过集体生活，严肃的表情是长期进行思考的结果。叫“王子”或者“青蛙”或者“青蛙王子”或者“小青蛙”，全凭小琪乐意，王子也没办法。其实小琪是个好女孩儿，热情直率，长得也挺可爱；而且人也很聪明，喜欢高雅的和可爱的东西。（我说“和”而不说“或”，注意没？）她刚刚开始大学生活，对一切都还满意。其实她对周围的事物并不十分敏感，心有所骛的人大多这样。好在她对王子很关心，王子也很感谢她。王子居住的那只青蛙口杯就是小琪买的。口杯的形状是这个样子的：
+
+```
+   /^\_/^\
+  / >   < \
+ / - - - - \  _    <-- Green One, present by de auther^^
+| \_______/@|/ \
+|           |  /
+ \_________/ \/
+ /         \ 
+
+```
+
+很有趣，是不是？和王子很相配，而且从实用角度讲也的确很舒服。另外小琪为王子的精神世界也做出了突出的贡献。说起来，如果王子像艾尼丝（达康的好朋友，我的“猫系列”的主人公^^）那样是只猫就好得多了！青蛙翻书比猫困难多了，是不是？不过话又说回来，如果不是小琪害怕带毛的东西，王子会不会成为小琪的好朋友还不一定呢。总而言之，一只有理性的动物怎麽能以独自思考为荣呢？虽然一个姓“叔”的人说过，看书的时候脑子会变成别人的跑马场，但那只是就哲学而论的，而且青蛙的脑袋也决不会有跑马场那麽大。所以有一段时间王子很为读书的事情苦恼。幸运的是，有一天，小琪去逛二手货市场，竟然发现了一个土拨鼠专用电脑键盘！说起来也真有趣，键盘的主人养了一只土拨鼠，他非认为他的土拨鼠是天才土拨鼠，于是这位电子硕士费了九个大招的力气，作了这麽一个土拨鼠专用键盘。其实这世上有理性的动物实在很少，电子硕士又费了九个大招的力气，才认清了自己的失败；王子也就这麽得到了通往信息世界的自行车。客观地说，知识以数字信号为载体实在比以纸张为载体的传播效率高的多，因此王子终于完成了这个小小的心愿，很高兴。可是小琪说:
+
+“我要做一件了不起Ｎ倍的事情，Ｎ大于一！”
+
+直到有了一点眉目，小琪才把自己的计划告诉给王子听。原来……（未完待续）
