--- a/_posts/2000-01-04-未完成游戏相关作品合集.md
+++ b/_posts/2000-01-04-未完成游戏相关作品合集.md
@@ -38,6 +38,21 @@ categories: 小说 未完成 朵朵
 <hr>
 2016-05-29
 
+# The Pinball of the Dead (死亡弹珠台)
+
+好像本来是打算写文章挖苦这个游戏的，后来连挖苦都懒得动笔了。现在仔细想想，中国玩家基本没有Pinball（日语发音近似“柏青哥”）的文化基础，当然不会觉得好玩。
+
+# WinKawaks FAQ
+
+本来想些教程的，但只写了一句话。
+
+# 死亡游戏
+
+忘了本来打算写什么了。
+
+<hr>
+2016-06-05
+
 # Arena
 
 ```
@@ -502,3 +517,23 @@ The title is not confirmed yet...
 按：不喜欢所有港式翻译的我，当然不会把Zero叫成“少年街霸”（只是不知这是否真的是日本人的叫法？）……记得天师曾在一篇关于街霸三的文章的注上提过“零式街霸”这个翻译，也许是他开玩笑，但是我喜欢:)  如果需要的话这条秘笈还可以写更多的东西，比如Juni的必杀……但是鉴于我给电软的所有电子邮件都没有任何回复，我怀疑自己是否有必要去努力查资料……残念:(
 
 ～～～～
+
+# The Pinball of the Dead (死亡弹珠台)
+
+看到这个游戏封面的时候，脑中立刻映出了无比硬派的死亡之屋二和大师级的改版作死亡打字……（待续）
+
+# WinKawaks FAQ
+
+钱钟书先生说得好，作古体诗的可以说他不看新诗，作新诗的可绝不敢说他不看古诗。同样的道理，玩街机的可以说他不玩其它游戏，却没有玩游戏的人肯说自己不玩街机——这当然有例外，但也正因为有例外而说明这是一般情况。——呵呵，没有人晕吧？^.^ 抛开文字游戏不谈，街机确实可称是游戏的极致：超强的图形处理能力，高清晰大屏幕，HiFi音箱，还有就是大摇杆、力反馈方向盘、退膛枪等输入装置……这一切，似乎都说明了“街机就是牛，就是牛，就是牛”的深奥哲理。但是！（待续）
+
+# 死亡游戏
+
+活着是什么？
+
+生存的意义是什么？
+
+这样的问题，不同的人肯定会有很多不同的答案。生物学家会说是进化，宗教学家会说是赎罪，社会学家会说是革命。
+
+而一个生活困难，而且还要养活一家老小的穷人，恐怕只能告诉你：能吃饱饭，就是活着的意义了。
+
+至于……（待续）
